﻿[B]Changelog[/B]
* Updated: MTG Viafree channel - enhance look and feel (Fixes #1285)

[I]Previous changes[/I]
* Updated: Artwork for ViaFree (Fixes #1272)
* Added: Expire date for ViaFree (Fixes #1272)
* Changed: Moved to sXXeXX for seasons for ViaFree (Fixes #1272)
* Updated: a bit more season info for ViaFree (See #1272)
* Added: Viafree's MTV and National Geographic channels (Fixes #1229)
* Fixed: ViaFree changed their JSON...again...and again...and broke the main listing (Fixes #1163)
* Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
* Fixed: ViaFree changed their JSON and broke the main listing (Fixes #1139)
* Fixed: Some ViaFree streams did not play (Fixes #1107)
* Fixed: some ViaFree videos that were just live did not play (Fixes #1050)
* Fixed: ViaFree based channels without a season/episode number broken (Fixes #996)
* Fixed: subtitle issue with some Swedish channels (Fixes #993)
* Fixed: ViaSat channels split into Viasat.se/.no and non-api channels
* Fixed: MTG changed their API again (Fixes #973)
* Fixed: clean-up some code in the Swedish channels
* Changed: Use the 'inputstream.adaptive' add-on for some Leia streams to solve some playback and header issues
* Added: ViaFree.se channel (See #945)
* Fixed: ViaFree.se channels broke (Fixes #945)
* Fixed: ViaSat streams would not play (Fixes #864)
* Fixed: not all ViaSat streams would have subtitles (Fixes #843)
* Fixed: ViaSat changed subtitle formats (Fixes #784)
* Fixed: ViaFree parsing (Fixes #765)
* Fixed: ViaFree Search will move to 'Titles with other chars' when enable 'Group list if exceeds # of folders' (Fixes #753)
* Fixed: MTG update their sites to a new standard and broke the Swedish and Norwegian channels (See #750)
* Fixed: more TV6 (MTG) stream issues
* Fixed: ViaSat channels sometimes won't work with manifest.m3u8 but do with master.m3u8 (See #598)
* Fixed: MTG channels did not select streams properly (Fixes #590)